docs/test-simple.css
body {
	--borderRadius: 45px;
	
	margin: 0;
	padding: 0;
	font-family: Arial, Helvetica, sans-serif;
	background-image: 
		linear-gradient(0deg, #0004 0%, #0004 100%),
		linear-gradient(135deg, #B2A2CD 25%, #5F5370 25%, #5F5370 50%, #B2A2CD 50%, #B2A2CD 75%, #5F5370 75%, #5F5370 100%);
	background-size: 28.28px 28.28px;
	background-attachment: fixed;
}

#options {
	padding: 10px 10px 15px;
	position: sticky;
	top: 0;
	z-index: 5;
	border-bottom: 2px ridge rgb(192, 192, 192);
	background: #E6DDFF;
}
#options > div {
	display: grid;
	grid-template-columns: auto auto auto auto 1fr;
	gap: 10px;
}
input[type="number"] {
	width: 3rem;
}
fieldset {
	padding: 5px 10px 5px 5px;
}
fieldset > :not(legend) {
	display: block;
	margin-bottom: 0.5em;
}
fieldset > :last-child {
	margin-bottom: 0;
}
fieldset div > :is(label, input) {
	display: block;
}
label:has(#imageSrc) {
	display: block;
	margin-top: 10px;
}




#demo {
	padding: 20px;
	text-align: center;
	line-height: 0;
}
adaptive-image {
	border: 0 solid greenyellow;
	margin: auto;
}
body:has(#square:checked) adaptive-image {
	border-radius: 0;
}
body:has(#curved:checked) adaptive-image {
	border-radius: var(--borderRadius);
}
body:has(#ellipse:checked) adaptive-image {
	border-radius: 50%;
}




footer {
	font-size: 80%;
	background: #E6DDFF;
	color: black;
	padding: 10px;
}
footer p {
	margin: 0;
}




/*******************/
/*** Test Images ***/
/*******************/

adaptive-image[src$="Blue and White Striped Dahlia Flower.svg"]::part(img) {
	filter: hue-rotate(65deg);
	background: conic-gradient(hwb(70 15% 30% / 1), hwb(150 15% 45% / 1));
}

